[package]
name = "tsugumi"
version = "0.2.0"
edition = "2021"
description = "Simple EPUB builder"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
image = { version = "0.24.5", default-features = false, features = ["gif", "jpeg", "png"] }
indexmap = "1.9.2"
mime_guess = "2.0.4"
serde = "1.0.152"
serde_yaml = "0.9.17"
tempfile = "3.4.0"
time = { version = "0.3.20", features = ["formatting"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4"] }
xml-rs = "0.8.4"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_test = "1.0.152"

[profile.release]
codegen-units = 1
lto = true
strip = true
