[package]
name = "tsugumi"
version = "0.3.0"
edition = "2024"
description = "Simple EPUB builder"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
clap_complete = "4.5.38"
image = { version = "0.25.5", default-features = false, features = ["gif", "jpeg", "png"] }
indexmap = "2.6.0"
mime_guess = "2.0.5"
serde = "1.0.215"
serde_yaml = "0.9.33"
tempfile = "3.14.0"
time = { version = "0.3.36", features = ["formatting"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
xml-rs = "0.8.23"
zip = { version = "2.2.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_test = "1.0.177"

[profile.release]
codegen-units = 1
lto = true
strip = true
